# ml-dl-visualization

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSES_INVENTORY.md  MAINTENANCE.md  README.md  SECURITY.md  docker-compose.yml  render.yaml  start.bat  stop.bat
platform/backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
platform/backend/app/: config.py  db.py  main.py  readiness.py
platform/backend/app/analytics/: models.py  tracker.py
platform/backend/app/api/: admin_routes.py  analytics_routes.py  audit_routes.py  auth_routes.py  curriculum_routes.py  llm_routes.py  model_routes.py  quiz_routes.py  rag_routes.py
platform/backend/app/audit/: __init__.py
platform/backend/app/auth/: dependencies.py  models.py  utils.py
platform/backend/app/llm/: anthropic_provider.py  base.py  factory.py  local_provider.py  ollama_provider.py  openai_provider.py  prompts.py  tutor.py  (+1 more)
platform/backend/hf-space/: Dockerfile  README.md
platform/backend/scripts/: ingest_to_cloud.py  seed_demo_data.py
platform/backend/tests/: conftest.py  test_analytics.py  test_api_admin.py  test_api_analytics.py  test_api_audit.py  test_api_audit_hooks.py  test_api_auth.py  test_api_auth_audit.py  test_api_change_password.py  test_api_quiz.py  test_api_review_fixes.py  test_api_semester_archive.py  test_api_soft_delete.py  test_api_user_import.py  test_audit.py  test_auth.py  test_db_migration_forces_admin_password_change.py  test_health.py  test_llm.py  test_llm_auth.py  test_llm_streaming.py  test_models.py  test_quick_answer.py
(+265 files in other folders)
