[project]
name = "ml-dl-viz-backend"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "scikit-learn>=1.6",
    "numpy>=2.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "anthropic>=0.42",
    "openai>=1.60",
    "websockets>=14.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.28",
    "scikit-image>=0.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28", "pytest-asyncio>=0.25", "pytest-cov>=6.0"]
